[package]
authors = ["Helium <info@helium.com>"]
build = "build.rs"
edition = "2018"
name = "helium-wallet"
version = "1.6.5-dev"

description = "A Rust Helium Wallet library"
keywords = ["helium", "blockchain", "wallet"]
readme = "README.md"

homepage = "https://developer.helium.com/blockchain/blockchain-cli"
repository = "https://github.com/helium/helium-wallet-rs"

license = "Apache-2.0"

[[bin]]
doc = false
name = "helium-wallet"
path = "src/main.rs"

[dependencies]
aes-gcm = "0" 
angry-purple-tiger = "0" 
anyhow = "1.0" 
base64 = "0" 
byteorder = "1.3.2" 
dialoguer = "0.8" 
geo-types = "^0.6" # pinned by h3ron but required here for geo_types::Point
h3ron = "^0.10" 
helium-api = {git = "https://github.com/stakejoy/helium-api-rs", branch = "cb/add-acct-activity"} 
helium-crypto = {git = "https://github.com/helium/helium-crypto-rs", tag = "v0.2.2"} 
helium-proto = {git = "https://github.com/helium/proto", branch = "master"} 
hex = "0.4" 
hmac = "0" 
lazy_static = "1" 
pbkdf2 = {version = "0", default-features = false} 
prettytable-rs = "0.8" 
qr2term = "0.2" 
rand = "0.8" 
regex = "1" 
reqwest = {version = "0", default-features = false, features = ["rustls-tls"]} 
rust_decimal = {version = "1", features = ["serde-float"]} 
serde = "1" 
serde_derive = "1" 
serde_json = "1" 
sha2 = "0" 
shamirsecretsharing = {version = "0.1.4", features = ["have_libsodium"]} 
sodiumoxide = "~0.2" 
structopt = "0.3" 
tokio = {version = "1", features = ["full"]} 

[dev-dependencies]
bs58 = "0.4"
